# openapi/api_api.go
@@ -112,9 +112,32 @@ func VerifierAPIAuthenticationResponse(c *gin.Context) {
 		c.AbortWithStatusJSON(400, ErrorMessageNoToken)
 		return
 	}
-	bytes, err := base64.RawURLEncoding.DecodeString(base64Token)
+
+	handleAuthenticationResponse(c, state, base64Token)
+}
+
+// GetVerifierAPIAuthenticationResponse - Stores the credential for the given session
+func GetVerifierAPIAuthenticationResponse(c *gin.Context) {
+	state, stateExists := c.GetQuery("state")
+	if !stateExists {
+		c.AbortWithStatusJSON(400, ErrorMessageNoState)
+		return
+	}
+
+	base64Token, tokenExists := c.GetQuery("vp_token")
+	if !tokenExists {
+		logging.Log().Info("No token was provided.")
+		c.AbortWithStatusJSON(400, ErrorMessageNoToken)
+		return
+	}
+
+	handleAuthenticationResponse(c, state, base64Token)
+}
+
+func handleAuthenticationResponse(c *gin.Context, state string, vpToken string) {
+	bytes, err := base64.RawURLEncoding.DecodeString(vpToken)
 	if err != nil {
-		logging.Log().Infof("Was not able to decode the form string %s. Err: %v", base64Token, err)
+		logging.Log().Infof("Was not able to decode the form string %s. Err: %v", vpToken, err)
 		c.AbortWithStatusJSON(400, ErrorMessageUnableToDecodeToken)
 		return
 	}
@@ -125,23 +148,24 @@ func VerifierAPIAuthenticationResponse(c *gin.Context) {
 	rawHolder := vpObjectMap["holder"]
 
 	var rawCredentials []map[string]interface{}
-	var holder = holder{}
+	var holder string
 
 	err = json.Unmarshal(verifiableCredentials, &rawCredentials)
 	if err != nil {
-		logging.Log().Infof("Was not able to decode the credentials from the token %s. Err: %v", base64Token, err)
+		logging.Log().Infof("Was not able to decode the credentials from the token %s. Err: %v", vpToken, err)
 		c.AbortWithStatusJSON(400, ErrorMessageUnableToDecodeCredential)
 		return
 	}
 	err = json.Unmarshal(rawHolder, &holder)
-	if err != nil || holder.Id == "" {
-		logging.Log().Infof("Was not able to decode the holder from the token %s. Err: %v", base64Token, err)
+	if err != nil || holder == "" {
+		logging.Log().Infof("Was not able to decode the holder from the token %s. Err: %v", vpToken, err)
 		c.AbortWithStatusJSON(400, ErrorMessageUnableToDecodeHolder)
 		return
 	}
 
-	sameDeviceResponse, err := getApiVerifier().AuthenticationResponse(state, rawCredentials, holder.Id)
+	sameDeviceResponse, err := getApiVerifier().AuthenticationResponse(state, rawCredentials, holder)
 	if err != nil {
+		logging.Log().Warnf("Was not able to get fullfil the authentication response. Err: %v", err)
 		c.AbortWithStatusJSON(400, ErrorMessage{Summary: err.Error()})
 		return
 	}
@@ -149,12 +173,13 @@ func VerifierAPIAuthenticationResponse(c *gin.Context) {
 		c.Redirect(302, fmt.Sprintf("%s?state=%s&code=%s", sameDeviceResponse.RedirectTarget, sameDeviceResponse.SessionId, sameDeviceResponse.Code))
 		return
 	}
+	logging.Log().Debugf("Successfully authenticated %s.", state)
 	c.JSON(http.StatusOK, gin.H{})
 }
 
 // VerifierAPIJWKS - Provides the public keys for the given verifier, to be used for verifing the JWTs
 func VerifierAPIJWKS(c *gin.Context) {
-	c.JSON(http.StatusOK, apiVerifier.GetJWKS())
+	c.JSON(http.StatusOK, getApiVerifier().GetJWKS())
 }
 
 // VerifierAPIStartSIOP - Initiates the siop flow and returns the 'openid://...' connection string
